--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -22,38 +22,38 @@
 <mat-sidenav-container>
     <mat-sidenav #sidenav>
         <mat-nav-list>
-            <a mat-list-item (click)="sidenav.toggle()" routerLink="home">
+            <a mat-list-item (click)="sidenav.toggle()" routerLink="/home">
                 <mat-icon>home</mat-icon>Home
             </a>
-            <a mat-list-item (click)="sidenav.toggle()" routerLink="dashboard">
+            <a mat-list-item (click)="sidenav.toggle()" routerLink="/dashboard">
                 <mat-icon>dashboard</mat-icon>Dashboard
             </a>
-            <a mat-list-item (click)="sidenav.toggle()" routerLink="subscription">
+            <a mat-list-item (click)="sidenav.toggle()" routerLink="/subscription">
                 <mat-icon>card_giftcard</mat-icon>Subscription
             </a>
 
-            <a mat-list-item (click)="sidenav.toggle()" routerLink="'profile'">
+            <a mat-list-item (click)="sidenav.toggle()" routerLink="/profile">
                 <mat-icon>person</mat-icon> Profile
             </a>
-            <a mat-list-item (click)="sidenav.toggle()" routerLink="'manage'">
+            <a mat-list-item (click)="sidenav.toggle()" routerLink="/manage">
                 <mat-icon>dns</mat-icon> Manage Account
             </a>
-            <a mat-list-item (click)="sidenav.toggle()" routerLink="request">
+            <a mat-list-item (click)="sidenav.toggle()" routerLink="/request">
                 <mat-icon>post_add</mat-icon> Request
             </a>
-            <a mat-list-item (click)="sidenav.toggle()" routerLink="'payment'">
+            <a mat-list-item (click)="sidenav.toggle()" routerLink="/payment">
                 <mat-icon>payment</mat-icon> Payment
             </a>
-            <a mat-list-item (click)="sidenav.toggle()" routerLink="report-bug" mat-list-item>
+            <a mat-list-item (click)="sidenav.toggle()" routerLink="/report-bug" mat-list-item>
                 <mat-icon>bug_report</mat-icon>Report Bug
             </a>
 
-            <a mat-list-item (click)="sidenav.toggle()" routerLink="help" mat-list-item>
+            <a mat-list-item (click)="sidenav.toggle()" routerLink="/help" mat-list-item>
                 <mat-icon>contact_support</mat-icon>Help & Support
             </a>
 
             <mat-divider></mat-divider>
-            <a mat-list-item *ngIf="!isLoggedIn" (click)="sidenav.toggle()" routerLink="login" mat-list-item>
+            <a mat-list-item *ngIf="!isLoggedIn" (click)="sidenav.toggle()" routerLink="/login" mat-list-item>
                 <mat-icon>input</mat-icon> Login
             </a>
             <a mat-list-item *ngIf="isLoggedIn" (click)="sidenav.toggle();logout()" mat-list-item>
@@ -64,7 +64,6 @@
     </mat-sidenav>
     <mat-sidenav-content (swiperight)="sidenav.toggle()">
         <div style="height: 100vh;">
-            <router-outlet></router-outlet>
         </div>
     </mat-sidenav-content>
 </mat-sidenav-container>
