--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.min.css";
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,400i,700,900&display=swap');
+@import "~font-awesome/css/font-awesome.css";
+
+html,
+body {
+    height: 100vh;
+    font-family: 'Lato';
+    background: #3F51B5;
+}
+
+body {
+    margin: 0;
+}
+
+mat-icon {
+    color: royalblue;
+    margin-right: 8%;
+}
